--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: brew install python-setuptools
 
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
+
       - name: Install pnpm
         run: npm i -g pnpm@9
 
