--- a/package.json
+++ b/package.json
@@ -14,21 +14,22 @@
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
     "start": "electron-vite preview",
     "dev": "electron-vite dev --watch",
-    "build": "npm run typecheck && electron-vite build",
+    "build": "npm run typecheck && electron-vite build && npm run build-rdev",
     "postinstall": "electron-builder install-app-deps",
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win --config electron-builder.config.cjs",
     "build:mac": "electron-vite build && electron-builder --mac --config electron-builder.config.cjs",
     "build:linux": "electron-vite build && electron-builder --linux --config electron-builder.config.cjs",
     "release": "node ./scripts/release.js",
-    "fix-pnpm-windows": "node ./scripts/fix-pnpm-windows.js"
+    "fix-pnpm-windows": "node ./scripts/fix-pnpm-windows.js",
+    "build-rdev": "mkdir -p resources/bin && cd whispo-rdev && cargo build -r && cp target/release/whispo-rdev ../resources/bin/whispo-rdev"
   },
   "dependencies": {
     "@egoist/electron-panel-window": "^8.0.3",
-    "@radix-ui/react-switch": "^1.1.1",
-    "uiohook-napi": "1.5.2"
+    "uiohook-napi": "1.5.4"
   },
   "devDependencies": {
+    "@radix-ui/react-switch": "^1.1.1",
     "@egoist/tailwindcss-icons": "^1.8.1",
     "@egoist/tipc": "^0.3.2",
     "@electron-toolkit/preload": "^3.0.1",
