--- a/whispo-rs/Cargo.toml
+++ b/whispo-rs/Cargo.toml
@@ -8,3 +8,6 @@ rdev = "0.5.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 enigo = "0.3.0"
+
+[profile.release]
+strip = true
