--- a/package.json
+++ b/package.json
@@ -19,6 +19,16 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win --config electron-builder.config.cjs",
     "build:mac": "electron-vite build && electron-builder --mac --config electron-builder.config.cjs",
+    "build:mac:signed": "npm run build && electron-builder --mac --config electron-builder.config.cjs --publish=never",
+    "build:mac:universal": "npm run build && electron-builder --mac --universal --config electron-builder.config.cjs",
+    "build:mas": "npm run build && electron-builder --mac mas --config electron-builder.config.cjs",
+    "build:mas:dev": "npm run build && electron-builder --mac mas-dev --config electron-builder.config.cjs",
+    "build:linux": "electron-vite build && electron-builder --linux --config electron-builder.config.cjs",
+    "release": "node ./scripts/release.js",
+    "setup:apple": "./scripts/setup-apple-signing.sh",
+    "verify:signing": "./scripts/verify-signing.sh",
+    "check:mas": "./scripts/check-mas-setup.sh",
+    "upload:mas": "./scripts/build-and-upload-mas.sh",
     "build:linux": "electron-vite build && electron-builder --linux --config electron-builder.config.cjs",
     "release": "node ./scripts/release.js",
     "fix-pnpm-windows": "node ./scripts/fix-pnpm-windows.js",
