--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "@egoist/electron-panel-window": "^8.0.3",
     "@modelcontextprotocol/sdk": "^1.13.3",
-    "@radix-ui/react-scroll-area": "^1.2.9"
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "jsonrepair": "^3.13.0"
   },
   "devDependencies": {
     "@egoist/tailwindcss-icons": "^1.8.1",
