--- a/package.json
+++ b/package.json
@@ -70,10 +70,12 @@
     "dayjs": "^1.11.13",
     "electron": "^31.0.2",
     "electron-builder": "^24.13.3",
+    "electron-icon-builder": "^2.0.1",
     "electron-updater": "^6.1.7",
     "electron-vite": "^2.3.0",
     "jsdom": "^25.0.1",
     "lucide-react": "^0.452.0",
+    "png-to-ico": "^2.1.8",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "^18.3.1",
