--- a/package.json
+++ b/package.json
@@ -53,16 +53,10 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-query": "^5.59.14",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^30.0.0",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "@vitest/coverage-v8": "^2.1.8",
-    "@vitest/ui": "^2.1.8",
     "autoprefixer": "^10.4.20",
     "bumpp": "^9.7.1",
     "class-variance-authority": "^0.7.0",
@@ -72,7 +66,6 @@
     "electron-builder": "^24.13.3",
     "electron-updater": "^6.1.7",
     "electron-vite": "^2.3.0",
-    "jsdom": "^25.0.1",
     "lucide-react": "^0.452.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
@@ -86,8 +79,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.3",
     "vite": "^5.4.8",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.1.8"
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "packageManager": "pnpm@9.12.1+sha512.e5a7e52a4183a02d5931057f7a0dbff9d5e9ce3161e33fa68ae392125b79282a8a8a470a51dfc8a0ed86221442eb2fb57019b0990ed24fab519bf0e1bc5ccfc4"
 }
